--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ a {
     color: black;
     font-size: 10px;
     font-family: "Open Sans", Roboto, Corbel, Candara, Colibri, Arial;
-    font-weight: bold;
+    font-weight: normal;
     text-anchor: end;
     text-align: right;
     stroke-opacity: 1;
