--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,8 @@ a {
     color: black;
     font-size: 10px;
     font-family: "Open Sans", Roboto, Corbel, Candara, Colibri, Arial;
-    /*text-shadow: 0 0 0 black;*/
-    font-weight: normal;
+    text-shadow: 0 0 0 black;
+    font-weight: bold;
     text-anchor: end;
     text-align: right;
     stroke-opacity: 1;
