--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ a {
     color: black;
     font-size: 10px;
     font-family: "Open Sans", Roboto, Corbel, Candara, Colibri, Arial;
-    text-shadow: 0 0 0 black;
+    text-shadow: 0 0 0 transparent;
     font-weight: bold;
     text-anchor: end;
     text-align: right;
