--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,7 @@ a {
     color: black;
     font-size: 10px;
     font-family: Roboto, "Open Sans", Corbel, Candara, Colibri, Arial;
-    text-shadow: 0px 0px rgba(0,0,0,0.75),
-    0px 1px rgba(0,0,0,0.75),
-    1px 0px rgba(0,0,0,0.75),
-    0px 0px rgba(0,0,0,0.75);
+    -webkit-text-stroke: 0.3px;
     font-weight: bold;
     text-anchor: end;
     text-align: right;
