--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,9 @@ a {
 
 .plate-text {
     color: black;
-    font-size: 10px;
-    font-family: Roboto, "Open Sans", Corbel, Candara, Colibri, Arial;
-    -webkit-text-stroke: 0.6px;
-    font-weight: bold;
+    font-size: 11px;
+    font-family: Corbel, Candara, Calibri, Verdana, Arial, sans-serif;
+    font-weight: normal;
     text-anchor: end;
     text-align: right;
     stroke-opacity: 1;
