--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ a {
 
 .plate-text {
     color: black;
-    font-size: 11px;
+    font-size: 12px;
     font-family: Corbel, Candara, Calibri, Verdana, Arial, sans-serif;
-    font-weight: normal;
+    font-weight: bold;
     text-anchor: end;
     text-align: right;
     stroke-opacity: 1;
