--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a {
     width: 100%;
     height: 100%;
     cursor: default;
-    position: absolute;
+    /*position: absolute;*/
     z-index: 50;
 }
 
