--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,9 @@ a {
 }
 
 .plate-box {
-    stroke: grey;
+    /*stroke: grey;*/
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     fill: white;
 }
 
