--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ a {
 .plate-box {
     /*stroke: grey;*/
     border-radius: 2px;
-    /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );
     fill: white;
 }
