font rendering fix attempt

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ a {
     color: black;
     font-size: 0.9em;
     font-family: Corbel, Candara, Calibri, Verdana, Arial, sans-serif;
-    font-weight: bold;
+    /*font-weight: bold;*/
     text-anchor: end;
     text-align: right;
     /*stroke-opacity: 1;*/
