font rendering fix attempt

--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,13 @@ a {
 }
 
 .plate-text {
+    transform: translate3d(0,0,0);
     color: black;
     font-size: 0.9em;
     font-family: Corbel, Candara, Calibri, Verdana, Arial, sans-serif;
     font-weight: bold;
     text-anchor: end;
     text-align: right;
-    -webkit-font-smoothing: antialiased;
     /*stroke-opacity: 1;*/
     /*opacity: 1;*/
 }
