--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,13 @@ a {
 }
 
 .plate-text {
-    transform: none !important;
     color: black;
     font-size: 0.9em;
     font-family: Corbel, Candara, Calibri, Verdana, Arial, sans-serif;
     font-weight: bold;
     text-anchor: end;
     text-align: right;
+    -webkit-transform-style: preserve-3d;
     /*stroke-opacity: 1;*/
     /*opacity: 1;*/
 }
