--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ a {
 
 /* map elements */
 .station-circle {
+    opacity: 1;
     fill: white;
     stroke: black;
 }
@@ -53,7 +54,7 @@ a {
     text-align: right;
     -webkit-transform-style: preserve-3d;
     /*stroke-opacity: 1;*/
-    /*opacity: 1;*/
+    opacity: 1;
 }
 
 .plate-box {
@@ -63,6 +64,7 @@ a {
     /*filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );*/
     fill: white; /* for rect */
     background-color: white; /* for div */
+    opacity: 1;
 }
 
 .plate-pole {
