--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,12 @@ a {
     stroke-dasharray: 2, 0;
 }
 
+path {
+    fill-opacity: 0; /* so that no white stuff be visible */
+}
+
 /* lines */
-.M1 { stroke: #E32017; fill-opacity: 0 }
+.M1 { stroke: #E32017; }
 .M2 { stroke: #003688; }
 .M3 { stroke: #00782A; }
 .M4 { stroke: #EE7C0E; }
