--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ a {
     /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
     /*filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );*/
     fill: white; /* for rect */
-    background-color: white; /* for div */
+    /*background-color: white; /!* for div *!/*/
     opacity: 1;
 }
 
