--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,10 @@ a {
     stroke-width: 1px;
 }
 
-.transfer {
-    stroke: black;
-    fill-opacity: 0;
-}
+/*.transfer {*/
+    /*stroke: black;*/
+    /*fill-opacity: 0;*/
+/*}*/
 
 .M-line {
     /*stroke-width: 2;*/
@@ -100,6 +100,19 @@ a {
 
 path {
     fill-opacity: 0; /* so that no white stuff be visible */
+}
+
+/* transfers */
+.transfer {
+    fill-opacity: 0;
+}
+.transfer :nth-child(odd) {
+    stroke: #000000;
+    stroke-opacity: 0.5;
+}
+.transfer :nth-child(even) {
+    stroke: #FFFFFF;
+    stroke-opacity: 0.5;
 }
 
 /* lines */
