--- a/css/style.css
+++ b/css/style.css
@@ -105,12 +105,10 @@ path {
 /* transfers */
 .transfer {
     fill-opacity: 0;
-}
-.transfer :nth-child(odd) {
     stroke: #000000;
     stroke-opacity: 0.5;
 }
-.transfer :nth-child(even) {
+.transfer :nth-child(1) {
     stroke: #FFFFFF;
     stroke-opacity: 0.5;
 }
