--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@ path {
 .M11 { stroke: #000000; }
 .M12 { stroke: #84B817; }
 
+.E :nth-child(1) { stroke: #7156A5 }
+.E :nth-child(2) { stroke: #FFFFFF }
+
 .leaflet-control-command-interior, input
 {
     background-image: url(images/command.png);
