--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/* latin-ext */
+@font-face {
+    font-family: 'Cambay';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Cambay Bold'), local('Cambay-Bold'), url(https://fonts.gstatic.com/s/cambay/v1/w6Ot8WDiDorG2p0IFjdYFhJtnKITppOI_IvcXXDNrsc.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Cambay';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Cambay Bold'), local('Cambay-Bold'), url(https://fonts.gstatic.com/s/cambay/v1/9M3kjQTQkUz1UH-8XJ4q-FtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
 html {
     height: 100%;
 }
@@ -55,10 +72,10 @@ a {
 .plate-text {
     color: black;
     font-size: 0.9em;
-    font-family: Corbel, Ubuntu, Cambay, sans-serif;
+    font-family: "Corbel Bold", Ubuntu, Cambay, sans-serif;
     text-anchor: end;
     text-align: right;
-    font-weight: 700;
+    /*font-weight: bold;*/
     opacity: 1;
 }
 
