--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,22 @@ a {
     cursor: not-allowed;
 }
 
+#contextmenu {
+    background-color: white;
+    font-family: Segoe, Tahoma, Ubuntu, Cambay, sans-serif;
+    font-size: 0.7em;
+    border: #aaa 1px solid;
+}
+
+#contextmenu tr td {
+    padding: 5px;
+}
+
+#contextmenu tr td:hover {
+    
+    background-color: #88aaff;
+}
+
 #overlay {
     width: 100%;
     height: 100%;
