--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,11 @@ body {
 }
 
 a {
-    color: #00B7FF;
+    color: #2196F3;
+}
+
+a:hover {
+    color: #E91E63;
 }
 
 #map-container {
@@ -64,4 +68,59 @@ a {
 .plate-pole {
     stroke: #404040;
     stroke-width: 1px;
+}
+
+
+.measure-line {
+    stroke: #ff0000;
+    stroke-width: 4px;
+    opacity: 0.5;
+}
+
+.measure-circle {
+    stroke: black;
+    fill: red;
+}
+
+
+#faq-card {
+    position: absolute;
+    top: 5%;
+    bottom: 5%;
+    left: 5%;
+    max-width: 1000px;
+    padding: 1%;
+    display: none;
+    background-color: white;
+    border-radius: 2px;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    font-family: Roboto, Calibri, sans-serif;
+    overflow-y: scroll;
+    transition: transform 200ms linear;
+    border-color: black;
+}
+
+.cross-ball {
+    float: right;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background: #E91E63;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.question {
+    font-weight: bold;
+    display: block;
+    margin-top: 1%;
+}
+
+.answer {
+    display: block;
+    padding-bottom: 1%;
+    border-bottom: #cccccc 1px solid;
 }
