--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,29 @@ a:hover {
     fill: red;
 }
 
+button {
+    background-color: white;
+    border: none;
+    height: 25px;
+    border-radius: 2px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    cursor: pointer;
+    transition: box-shadow 100ms;
+    -webkit-user-select: none;
+    user-select: none;
+    outline-width: 0;
+}
+
+button:active {
+      box-shadow: none;
+}
+
+button:disabled {
+        background: #eaeaea;
+    color: #a8a8a8;
+    cursor: auto;
+}
+
 
 #faq-card {
     position: absolute;
@@ -111,6 +134,7 @@ a:hover {
     font-weight: bold;
     text-align: center;
     vertical-align: middle;
+    cursor: pointer;
 }
 
 .question {
