--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ a:hover {
 
 .plate-box {
     /*stroke: grey;*/
-    /*border-radius: 2px;*/
+    border-radius: 2px;
     /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
     /*filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24) );*/
     fill: white; /* for rect */
@@ -87,7 +87,7 @@ button {
     border: none;
     height: 25px;
     border-radius: 2px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     cursor: pointer;
     transition: box-shadow 100ms;
     -webkit-user-select: none;
@@ -95,12 +95,16 @@ button {
     outline-width: 0;
 }
 
+button:hover {
+    background-color: #f0f0f0;
+}
+
 button:active {
-      box-shadow: none;
+    box-shadow: none;
 }
 
 button:disabled {
-        background: #eaeaea;
+    background: #eaeaea;
     color: #a8a8a8;
     cursor: auto;
 }
@@ -110,14 +114,17 @@ button:disabled {
     position: absolute;
     top: 5%;
     bottom: 5%;
+    right: 5%;
     left: 5%;
-    max-width: 1000px;
+    width: 90%;
+    max-width: 20cm;
+    margin: 0 auto;
     padding: 1%;
     display: none;
     background-color: white;
     border-radius: 2px;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-    font-family: Roboto, Calibri, sans-serif;
+    font-family: Roboto, Calibri, Helvetica, sans-serif;
     overflow-y: scroll;
     transition-property: transform opacity;
     transition-duration:  200ms;
