--- a/css/style.css
+++ b/css/style.css
@@ -122,27 +122,34 @@ button:disabled {
     padding: 1%;
     display: none;
     background-color: white;
-    border-radius: 2px;
+    border-radius: 4px;
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     font-family: Roboto, Calibri, Helvetica, sans-serif;
     overflow-y: scroll;
     transition-property: transform opacity;
     transition-duration:  200ms;
-    border-color: black;
 }
 
 .cross-ball {
     float: right;
-    height: 50px;
-    width: 50px;
+    height: 12mm;
+    width: 12mm;
+    line-height: 12mm;
     border-radius: 50%;
     background: #E91E63;
     color: white;
-    font-size: 30px;
+    font-size: 12mm;
     font-weight: bold;
     text-align: center;
-    vertical-align: middle;
+    /* not selectabled */
+    -webkit-user-select: none;
+    user-select: none;
     cursor: pointer;
+}
+
+.cross-ball:hover {
+    filter: grayscale(0.1) opacity(0.8);
+    -webkit-filter: grayscale(0.1) opacity(0.8);
 }
 
 .question {
