--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ button:disabled {
     border-radius: 50%;
     background: #E91E63;
     color: white;
-    font-size: 12mm;
+    /*font-size: 12mm;*/
     font-weight: bold;
     text-align: center;
     /* not selectabled */
