--- a/css/contextmenu.css
+++ b/css/contextmenu.css
@@ -1,4 +1,8 @@
 #contextmenu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10000;
     background-color: white;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     font-family: Segoe, Tahoma, Ubuntu, Cambay, Roboto, sans-serif;
