--- a/css/contextmenu.css
+++ b/css/contextmenu.css
@@ -9,6 +9,7 @@
     font-size: 0.7em;
     margin-top: 1px; /* so that the first element is not automatically selected */
     border-collapse: collapse;
+    transform-origin: 0 0;
     -moz-user-select: none;
     -khtml-user-select: none;
     -webkit-user-select: none;
