--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ a:hover {
     font-family: Segoe, Tahoma, Ubuntu;
 }
 
+@media only screen and (max-device-width: 1000px) and (-webkit-min-device-pixel-ratio: 2) {
+    .leaflet-control-attribution {
+        display: none;
+    }
+} 
+
 #overlay {
     width: 100%;
     height: 100%;
