--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ a:hover {
 
 #map-container {
     height: 100%; /* the map should have a defined height */
+    font-size: 12px;
     cursor: default;
     transition-property: filter -webkit-filter;
     transition-duration:  200ms;
