--- a/css/scheme.css
+++ b/css/scheme.css
@@ -31,8 +31,12 @@ path {
     /*stroke-width: 2;*/
 }
 
+#paths-outer > .L {
+    stroke-width: 0px;
+}
 
-.M1 { stroke: #E32017; }
+
+/*.M1 { stroke: #E32017; }
 .M2 { stroke: #003688; }
 .M3 { stroke: #00782A; }
 .M4 { stroke: #EE7C0E; }
@@ -46,7 +50,77 @@ path {
 .M12 { stroke: #84B817; }
 .E { stroke:  #7156A5; }
 .L { stroke: #00A4A7; }
+#paths-inner * { stroke: #FFFFFF; }*/
+
+/* reverse engineered from the original map */
+.M1 { stroke: rgb(238,46,34); }
+.M2 { stroke: rgb(27,63,148); }
+.M3 { stroke: rgb(0,132,61); }
+.M4 { stroke: rgb(244,128,38); }
+.M5 { stroke: rgb(151,1,94); }
+.M6 { stroke: rgb(176,95,15); }
+.M7 { stroke: rgb(254,209,5); }
+.M8 { stroke: rgb(149,156,161); }
+.M9 { stroke: rgb(6,157,220); }
+.M10 { stroke: rgb(243,134,160); }
+.M11 { stroke: rgb(35,31,32); }
+.M12 { stroke: rgb(121,193,66); }
+.E { stroke:  rgb(96,64,153); }
+.L { stroke: rgb(0,177,176); }
 #paths-inner * { stroke: #FFFFFF; }
+
+/* wikipedia */
+/*.M1 { stroke: #DC241F; }
+.M2 { stroke: #0019A8; }
+.M3 { stroke: #007229; }
+.M4 { stroke: #FF6600; }
+.M5 { stroke: #751056; }
+.M6 { stroke: #894E24; }
+.M7 { stroke: #FFCE00; }
+.M8 { stroke: #868F98; }
+.M9 { stroke: #00A0E2; }
+.M10 { stroke: #D799AF; }
+.M11 { stroke: #000000; }
+.M12 { stroke: #66CC00; }
+.E { stroke:  #6666CC; }
+.L { stroke: #00AFAD; }
+#paths-inner * { stroke: #FFFFFF; }*/
+
+/* pantones */
+/*.M1 { stroke: #DA291C; }
+.M2 { stroke: #0019A8; }
+.M3 { stroke: #007229; }
+.M4 { stroke: #FF6600; }
+.M5 { stroke: #751056; }
+.M6 { stroke: #A45A2A; }
+.M7 { stroke: #FFCE00; }
+.M8 { stroke: #868F98; }
+.M9 { stroke: #00A0E2; }
+.M10 { stroke: #E89CAE; }
+.M11 { stroke: #2D2926; }
+.M12 { stroke: #66CC00; }
+.E { stroke:  #6666CC; }
+.L { stroke: #00AFAD; }
+#paths-inner * { stroke: #FFFFFF; }*/
+
+
+/* moscow */
+/*.M1 { stroke: #ED1B35; }
+.M2 { stroke: #0078BF; }
+.M3 { stroke: #44B85C; }
+.M4 { stroke: #F58631; }
+.M5 { stroke: #8E479C; }
+.M6 { stroke: #894E35; }
+.M7 { stroke: #FFCB31; }
+.M8 { stroke: #A1A2A3; }
+.M9 { stroke: #19C1F3; }
+.M10 { stroke: #CC0066; }
+.M11 { stroke: #000000; }
+.M12 { stroke: #B3D445; }
+.E { stroke:  #79CDCD; }
+.L { stroke: #79CDCD; }
+#paths-inner * { stroke: #FFFFFF; }*/
+
 
 /* material colors */
 /*
@@ -66,3 +140,4 @@ path {
 #paths-outer .E { stroke: #607D8B; }
 #paths-inner .E { stroke: #FFFFFF; }
 */
+
