--- a/css/contextmenu.css
+++ b/css/contextmenu.css
@@ -5,7 +5,7 @@
     z-index: 10000;
     background-color: white;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    font-family: Segoe, Tahoma, Ubuntu, Cambay, Roboto, sans-serif;
+    font-family: "Segoe UI", Tahoma, Ubuntu, Cambay, Roboto, sans-serif;
     font-size: 0.7em;
     margin-left: 1px; /* so that the first element is not automatically selected */
     border-collapse: collapse;
