--- a/public/style.css
+++ b/public/style.css
@@ -1,104 +1,1 @@
-html {
-    height: 100%;
-}
-
-body {
-    margin: 0px;
-    padding: 0px; /* redundant */
-    height: 100%;
-}
-
-a {
-    color: #2196F3;
-}
-
-a:hover {
-    color: #E91E63;
-}
-
-#map-container {
-    height: 100%; /* the map should have a defined height */
-    font-size: 12px;
-    cursor: default;
-}
-
-.leaflet-dragging #map-container {
-    cursor: -webkit-grab;
-    cursor: grab;
-}
-
-#map-container.dimmed {
-    -webkit-filter: brightness(0.75);
-    filter: brightness(0.75);
-    transition-property: filter -webkit-filter;
-    transition-duration: 200ms;
-}
-
-.leaflet-control-scale-line {
-    opacity: 1;
-}
-
-.ajs-message {
-    bottom: 20px;
-    background-color: #ccc;
-    font-family: Segoe, Tahoma, Ubuntu;
-}
-
-@media only screen and (max-device-width: 1000px) and (-webkit-min-device-pixel-ratio: 2) {
-    .leaflet-control-attribution {
-        display: none;
-    }
-}
-
-#wait {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.2em;
-    z-index: 10000;
-    color: #606060;
-    opacity: 0;
-    transition: opacity 2s linear;
-}
-
-circle {
-    transform-origin: 50% 50%;
-}
-
-@-moz-document url-prefix() {
-    circle {
-        transform-origin: 0% 0%;
-    }
-}
-
-button {
-    background-color: white;
-    border: none;
-    height: 25px;
-    border-radius: 2px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    cursor: pointer;
-    transition: box-shadow 100ms;
-    -webkit-user-select: none;
-    user-select: none;
-    outline-width: 0;
-}
-
-button:hover {
-    background-color: #f0f0f0;
-}
-
-button:active {
-    box-shadow: none;
-}
-
-button:disabled {
-    background: #eaeaea;
-    color: #a8a8a8;
-    cursor: auto;
-}
-
- /*.leaflet-zoom-anim  .leaflet-zoom-animated {
-     transition-duration: 1s;
- }*/
+body,html{height:100%}body{margin:0;padding:0}a{color:#2196F3}a:hover{color:#E91E63}#map-container{height:100%;font-size:12px;cursor:default}.leaflet-dragging #map-container{cursor:-webkit-grab;cursor:grab}#map-container.dimmed{-webkit-filter:brightness(.75);filter:brightness(.75);transition-property:filter -webkit-filter;transition-duration:.2s}.leaflet-control-scale-line{opacity:1}.ajs-message{bottom:20px;background-color:#ccc;font-family:Segoe,Tahoma,Ubuntu}@media only screen and (max-device-width:1000px) and (-webkit-min-device-pixel-ratio:2){.leaflet-control-attribution{display:none}}#wait{position:fixed;top:50%;left:50%;font-family:Arial,Helvetica,sans-serif;font-size:1.2em;z-index:10000;color:#606060;opacity:0;transition:opacity 2s linear}circle{transform-origin:50% 50%}@-moz-document url-prefix(){circle{transform-origin:0 0}}button{background-color:#fff;border:none;height:25px;border-radius:2px;box-shadow:0 1px 3px rgba(0,0,0,.12),0 1px 2px rgba(0,0,0,.24);cursor:pointer;transition:box-shadow .1s;-webkit-user-select:none;user-select:none;outline-width:0}button:hover{background-color:#f0f0f0}button:active{box-shadow:none}button:disabled{background:#eaeaea;color:#a8a8a8;cursor:auto}
