--- a/src/ui/TextPlate/style.css
+++ b/src/ui/TextPlate/style.css
@@ -2,7 +2,7 @@
     color: #000000;
     text-anchor: end;
     text-align: right;
-    font-family: Corbel, Candara, Calibri, Ubuntu, sans-serif;
+    font-family: Corbel, Candara, Calibri, 'Trebuchet MS', Ubuntu, sans-serif;
     font-weight: bold;
     opacity: 1;
     -webkit-user-select: none;
