--- a/docs/res/moscow/scheme.css
+++ b/docs/res/moscow/scheme.css
@@ -13,5 +13,6 @@
 .M13 { stroke: rgb(243,134,160); }
 .M14 { stroke: rgb(0,177,176); }
 .E { stroke: rgb(96,64,153); }
+.E1 { stroke: rgb(244,128,38); }
 .L { stroke: rgb(96,64,153); }
 #paths-inner * { stroke: #FFFFFF; }
