--- a/res/spb/scheme.css
+++ b/res/spb/scheme.css
@@ -17,18 +17,18 @@
 #paths-inner * { stroke: #FFFFFF; }*/
 
 /* reverse engineered from the original map */
-.M1 { stroke: rgb(238,46,34); }
-.M2 { stroke: rgb(27,63,148); }
-.M3 { stroke: rgb(0,132,61); }
-.M4 { stroke: rgb(244,128,38); }
-.M5 { stroke: rgb(151,1,94); }
-.M6 { stroke: rgb(176,95,15); }
-.M7 { stroke: rgb(254,209,5); }
-.M8 { stroke: rgb(149,156,161); }
-.M9 { stroke: rgb(6,157,220); }
-.M10 { stroke: rgb(243,134,160); }
-.M11 { stroke: rgb(35,31,32); }
-.M12 { stroke: rgb(121,193,66); }
+.M1 { stroke: rgb(238,46,34); } /* Voxaľnaja */
+.M2 { stroke: rgb(27,63,148); } /* Moskovskaja */
+.M3 { stroke: rgb(0,132,61); } /* Nevskaja */
+.M4 { stroke: rgb(244,128,38); } /* Lahtinskaja */
+.M5 { stroke: rgb(151,1,94); } /* Kupčinskaja */
+.M6 { stroke: rgb(176,95,15); } /* Ligovskaja */
+.M7 { stroke: rgb(254,209,5); } /* Koľcevaja */
+.M8 { stroke: rgb(149,156,161); } /* Admiraltejskaja */
+.M9 { stroke: rgb(6,157,220); } /* Severnaja */
+.M10 { stroke: rgb(243,134,160); } /* Pravoberežnaja */
+.M11 { stroke: rgb(35,31,32); } /* Aviacionnaja */
+.M12 { stroke: rgb(121,193,66); } /* Kinovejevskaja */
 .E { stroke:  rgb(96,64,153); }
 .L { stroke: rgb(0,177,176); }
 #paths-inner * { stroke: #FFFFFF; }
