leaflet pointer-events fix

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -27,6 +27,10 @@ circle {
     fill: none;
 }
 
+#paths-outer > path, #transfers-outer > path {
+    pointer-events: stroke;
+}
+
 #transfers-outer {
     stroke: #404040;
 }
