--- a/src/ui/FAQ/styles.pcss
+++ b/src/ui/FAQ/styles.pcss
@@ -14,11 +14,9 @@
     font-family: Roboto, Calibri, Helvetica, sans-serif;
     overflow-y: scroll;
     transition-property: transform opacity;
-    transition-duration:  200ms;
-}
+    transition-duration: 200ms;
 
-@media only screen and (max-width: 1000px) {
-    .faq-card {
+    @media only screen and (max-width: 1000px) {
         max-width: 500px;
         width: 90%;
     }
@@ -38,10 +36,10 @@
     /* not selectabled */
     user-select: none;
     cursor: pointer;
-}
 
-.cross-ball:hover {
-    filter: grayscale(0.1) opacity(0.8);
+    &:hover {
+        filter: grayscale(0.1) opacity(0.8);
+    }
 }
 
 .question {
