--- a/res/colors.css
+++ b/res/colors.css
@@ -1,18 +1,19 @@
 :root {
   --white: #FFFFFF;
-  --grey: rgb(149,156,161);
-  --black: rgb(35,31,32);
-  --brown: rgb(176,95,15);
-  --red: rgb(238,46,34);
-  --orange: rgb(244,128,38);
-  --yellow: rgb(254,209,5);
-  --lime: rgb(121,193,66);
-  --green: rgb(0,132,61);
-  --teal: rgb(0,177,176);
-  --cyan: rgb(132,205,188);
-  --azure: rgb(6,157,220);
-  --blue: rgb(27,63,148);
-  --violet: rgb(96,64,153);
-  --purple: rgb(151,1,94);
-  --pink: rgb(243,134,160);
+  --grey: rgb(161,165,167);
+  --black: rgb(29,29,27);
+  --brown: rgb(179,99,0);
+  --red: rgb(228,35,19);
+  --orange: rgb(239,123,16);
+  --yellow: rgb(255,211,0);
+  --lime: rgb(128,186,39);
+  --green: rgb(0,125,50);
+  --teal: rgb(0,166,170);
+  --cyan: rgb(147,206,189);
+  --light-azure: rgb(0,168,231);
+  --azure: rgb(0,152,216);
+  --blue: rgb(36,53,136);
+  --purple: rgb(155,0,88);
+  --magenta: rgb(232,48,138);
+  --pink: rgb(240,134,163);
 }
