--- a/res/helsinki/scheme.css
+++ b/res/helsinki/scheme.css
@@ -1,8 +1,8 @@
-.M1 { stroke: rgb(244,128,38); }
-.M2 { stroke: rgb(151,1,94); }
-.M3 { stroke: rgb(6,157,220); }
-.M4 { stroke: rgb(0,132,61); }
-.M5 { stroke: rgb(27,63,148); }
+.M1 { stroke: var(--orange); }
+.M2 { stroke: var(--purple); }
+.M3 { stroke: var(--azure); }
+.M4 { stroke: var(--green); }
+.M5 { stroke: var(--blue); }
 .M6 { stroke: rgb(176,95,15); }
 .M7 { stroke: rgb(254,209,5); }
 .M8 { stroke: rgb(149,156,161); }
