--- a/res/moscow/scheme.css
+++ b/res/moscow/scheme.css
@@ -1,18 +1,19 @@
-.M1 { stroke: rgb(238,46,34); }
-.M2 { stroke: rgb(0,132,61); }
-.M3 { stroke: rgb(27,63,148); }
-.M4 { stroke: rgb(6,157,220); }
-.M5 { stroke: rgb(176,95,15); }
-.M6 { stroke: rgb(244,128,38); }
-.M7 { stroke: rgb(151,1,94); }
-.M8 { stroke: rgb(254,209,5); }
-.M9 { stroke: rgb(149,156,161); }
-.M10 { stroke: rgb(121,193,66); }
-.M11 { stroke: rgb(35,31,32); }
-.M12 { stroke: rgb(132,205,188); }
-.M13 { stroke: rgb(243,134,160); }
-.M14 { stroke: rgb(0,177,176); }
-.E { stroke: rgb(96,64,153); }
+.M1 { stroke: var(--red); }
+.M2 { stroke: var(--green); }
+.M3 { stroke: var(--blue); }
+.M4 { stroke: var(--azure); }
+.M5 { stroke: var(--brown); }
+.M6 { stroke: var(--orange); }
+.M7 { stroke: var(--purple); }
+.M8 { stroke: var(--yellow); }
+.M9 { stroke: var(--grey); }
+.M10 { stroke: var(--lime); }
+.M11 { stroke: var(--black); }
+.M12 { stroke: var(--cyan); }
+.M13 { stroke: var(--magenta); }
+.M14 { stroke: var(--teal); }
+.M15 { stroke: var(--pink); }
+.E { stroke: var(--blue); }
 .E1 { stroke: rgb(244,128,38); }
-.L { stroke: rgb(96,64,153); }
-#paths-inner * { stroke: #FFFFFF; }
+.L { stroke: var(--light-azure); }
+#paths-inner * { stroke: #fff; }
