--- a/res/qazan/scheme.css
+++ b/res/qazan/scheme.css
@@ -1,5 +1,5 @@
-.M1 { stroke: rgb(238,46,34); }
-.M2 { stroke: rgb(27,63,148); }
+.M1 { stroke: var(--red); }
+.M2 { stroke: var(--blue); }
 .M3 { stroke: rgb(0,132,61); }
 .M4 { stroke: rgb(244,128,38); }
 .M5 { stroke: rgb(151,1,94); }
