--- a/res/stockholm/scheme.css
+++ b/res/stockholm/scheme.css
@@ -1,6 +1,6 @@
-.M1 { stroke: rgb(27,63,148); }
-.M2 { stroke: rgb(238,46,34); }
-.M3 { stroke: rgb(0,132,61); }
+.M1 { stroke: var(--blue); }
+.M2 { stroke: var(--red); }
+.M3 { stroke: var(--green); }
 .M4 { stroke: rgb(244,128,38); }
 .M5 { stroke: rgb(151,1,94); }
 .M6 { stroke: rgb(176,95,15); }
