--- a/src/ui/FAQ/styles.pcss
+++ b/src/ui/FAQ/styles.pcss
@@ -7,6 +7,7 @@
     width: 50%;
     margin: 0 auto;
     padding: 1%;
+    z-index: 1000;
     display: none;
     background-color: white;
     border-radius: 4px;
