--- a/src/css/map.css
+++ b/src/css/map.css
@@ -3,7 +3,7 @@ path {
 }
 
 circle {
-    transform-origin: 50% 50%;
+    // transform-origin: 0% 0%;
 
     @-moz-document url-prefix() {
         transform-origin: 0% 0%;
