plate text alignment

--- a/src/ui/Tooltip/styles.pcss
+++ b/src/ui/Tooltip/styles.pcss
@@ -53,12 +53,12 @@
 
 .plate-box {
     color: #000000;
-    text-anchor: end;
-    text-align: right;
+    text-align: center;
     font-family: Corbel, 'Ubuntu-Medium', Candara, Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     opacity: 1;
     user-select: none;
+    transform: translate(50%, 0);
 
     /* -webkit-font-smoothing: antialiased; */
     
