--- a/src/ui/SvgOverlay/styles.pcss
+++ b/src/ui/SvgOverlay/styles.pcss
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: visible;
     z-index: 5;
     /*will-change: transform;*/ /*blurs fonts */
 }
