--- a/src/css/map.css
+++ b/src/css/map.css
@@ -10,31 +10,8 @@ circle {
     }
 }
 
-#station-circles {
-    fill: white;
-    stroke: black;
-}
-
-#dummy-circles {
-    opacity: 0;
-    stroke: blue;
-    stroke-width: 0.5px;
-}
-
-#paths-outer, #paths-inner, #transfers-outer, #transfers-inner {
-    fill: none;
-}
-
-#paths-outer, #transfers-outer {
-    & > path {
-        pointer-events: stroke;
+#map-container {
+    & path {
+        pointer-events: initial;
     }
-}
-
-#transfers-outer {
-    stroke: #404040;
-}
-
-#transfers-inner {
-    stroke: #FFFFFF;
 }
